--- a/config/database.yml
+++ b/config/database.yml
@@ -1,35 +1,23 @@
-# PostgreSQL. Versions 9.3 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On macOS with Homebrew:
-#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
-# On macOS with MacPorts:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem 'pg'
-#
 default: &default
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
+  
 development:
   <<: *default
-  database: web_development
-
+  database: sadoc
+  username: usystemapp
+  password: syAcc21.21
+  host: 192.168.198.128
+  port: 5432
+  schema_search_path: public
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: web
+  #username: pacademica
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +45,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: web_test
+  database: sadoc
+  username: usystemapp
+  password: syAcc21.21
+  host: 192.168.198.128
+  port: 5432
+  schema_search_path: public
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +74,9 @@ test:
 #
 production:
   <<: *default
-  database: web_production
-  username: web
-  password: <%= ENV['WEB_DATABASE_PASSWORD'] %>
+  database: sadoc
+  username: usystemapp
+  password: syAcc21.21
+  host: 192.168.198.128
+  port: 5432
+  schema_search_path: public
